Fix for logon failures do to setting Id on null Get result

--- a/src/TapMapWeb/Views/Account/LogOn.cshtml
+++ b/src/TapMapWeb/Views/Account/LogOn.cshtml
@@ -12,8 +12,13 @@ New user?  @Html.ActionLink("Register", "Create", "Account") here.
 </div>
 
 
+
+
 @using (Html.BeginForm("LogOn", "Account", FormMethod.Post, new { @class = "form-vertical well" }))
 {
+    <div style="color:Red">
+    @ViewBag.Message
+    </div>
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>Login</legend>
